--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,5 +1,4 @@
-// src/components/Header/Header.module.scss
-@import "../../styles/variables.scss";
+/* src/components/Header/Header.module.scss */
 
 .header {
   background-color: #e9e9e9;
@@ -10,16 +9,17 @@
   z-index: 1000;
   padding: 0 30px;
   height: 60px;
-  transition: opacity 0.5s ease, transform 0.5s ease;
-
-  &.visible {
-    opacity: 1 !important;
-    transform: translateY(0);
-  }
+  transition: visibility 0s 0.5s, opacity 0.5s ease, transform 0.5s ease;
 
   &.hidden {
     opacity: 0;
-    transform: translateY(-20px);
+    visibility: hidden; /* Скрываем элемент */
+  }
+
+  &.visible {
+    opacity: 1 !important;
+    visibility: visible; /* Отображаем элемент */
+    transform: translateY(0);
   }
 
   .headerWrapper {
